lots of lil bugs fixed and this isn't even what i wanted to do in the first place THEY KEEP POPPING UP HELP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
             android:launchMode="singleTask"
             android:theme="@style/Theme.FoodieBuddy"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
